[package]
name = "soundex-rs"
version = "0.1.3"
edition = "2021"
authors = ["bestgopher <84328409@qq.com>"]
description = "A library that calculates soundex value."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/bestgopher/soundex-rs"
repository = "https://github.com/bestgopher/soundex-rs"
keywords = ["soundex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
full = []
default = []
